--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -2,7 +2,7 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
-$body-font-family: 'Roboto', 'Nanum Gothic', sans-serif !important;
-$heading-font-family: 'Roboto', 'Nanum Gothic', sans-serif !important;
+$body-font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Nanum Gothic', sans-serif !important;
+$heading-font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Nanum Gothic', sans-serif !important;
 
 @import '~vuetify/src/styles/styles.sass';
